--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,7 +1,12 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= form_for(:user, url: registration_path(:user), html: { method: :put }) do |f| %>
   <%= render "users/shared/error_messages", resource: resource %>
+
+  <div>
+    <%= f.label :username %><br />
+    <%= f.text_field :username, autofocus: true %>
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
